@@ -1,3 +1,7 @@
+2005-06-12 Mikhail Khodjaiants
+	Temporary fix for bug 79872: Make instruction stepping default in disassembly view.
+	* DisassemblyView.java
+
 2005-06-10 Mikhail Khodjaiants
 	Bug 84929: The "Expression to watch" field of the "Add Watchpoint" dialog is editable.
 	* CDebugModelPresentation.java
